# marvin

./: README.md  gui_main.glade  marvin.cabal  stack.yaml
executable/: Main.hs
src/Marvin/: API.hs
src/Marvin/API/: EvaluationMetrics.hs  Fallible.hs
src/Marvin/API/Algorithms/: KMeans.hs  LinearRegression.hs  LogisticRegression.hs  NaiveBayes.hs
src/Marvin/API/Algorithms/Internal/: GradientDescent.hs
src/Marvin/API/Meta/: Evaluator.hs  Model.hs  Pipeline.hs  PipelineModel.hs
src/Marvin/API/Preprocess/: FeatureScaling.hs  OneHotEncode.hs
src/Marvin/API/Table/: Column.hs  DataType.hs  Internal.hs  Parse.hs  PrettyPrint.hs  TrainTestSplit.hs
src/Marvin/Examples/: HousingPrices.hs  NetworkIntrusionDetection.hs  SpamClassification.hs
src/Marvin/GUI/: AlgorithmDescriptor.hs  ConfigWindow.hs  Main.hs
test-suite/: MarvinSpec.hs
test-suite/Marvin/API/: FallibleSpec.hs
test-suite/Marvin/API/Algorithms/: KMeansSpec.hs  LinearRegressionSpec.hs  NaiveBayesSpec.hs
test-suite/Marvin/API/Algorithms/Internal/: GradientDescentSpec.hs
test-suite/Marvin/API/Meta/: EvaluatorSpec.hs  PipelineSpec.hs
test-suite/Marvin/API/Preprocess/: FeatureScalingSpec.hs  OneHotEncodeSpec.hs
test-suite/Marvin/API/Table/: ColumnSpec.hs  InternalSpec.hs  ParseSpec.hs  TrainTestSplitSpec.hs
test-suite/Marvin/Test/: Metric.hs  TestUtils.hs
